service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      port: 80
      targetPort: 80
